Add comments to .py files. Add some styling.

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Mad's Movie Trailers!</title>
+    <title>Matt's Movie Trailers!</title>
 
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -14,20 +14,11 @@
         body {
             padding-top: 80px;
         }
-        #trailer .modal-dialog {
-            margin-top: 22%;
-            width: 640px;
-            height: 480px;
-        }
         .hanging-close {
             position: absolute;
             top: -12px;
             right: -12px;
             z-index: 9001;
-        }
-        #trailer-video {
-            width: 100%;
-            height: 100%;
         }
         .movie-tile {
             margin-bottom: 20px;
@@ -36,6 +27,9 @@
         .movie-tile:hover {
             background-color: #EEE;
             cursor: pointer;
+        }
+        .navbar-inverse {
+            background-image: linear-gradient(to bottom,#111,#0af 150%);
         }
         .scale-media {
             padding-bottom: 56.25%;
@@ -49,6 +43,15 @@
             left: 0;
             top: 0;
             background-color: white;
+        }
+        #trailer .modal-dialog {
+            margin-top: 200px;
+            width: 640px;
+            height: 480px;
+        }
+        #trailer-video {
+            width: 100%;
+            height: 100%;
         }
     </style>
     <script type="text/javascript" charset="utf-8">
@@ -97,7 +100,7 @@
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Mad's Movie Trailers</a>
+            <a class="navbar-brand" href="#">Matt's Movie Trailers</a>
           </div>
         </div>
       </div>
