Improve styling. Update README.

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -31,6 +31,11 @@
         .navbar-inverse {
             background-image: linear-gradient(to bottom,#111,#0af 150%);
         }
+        .navbar-inverse .navbar-brand {
+            color: #eee;
+            font-weight: bold;
+            font-size: 20px;
+        }
         .scale-media {
             padding-bottom: 56.25%;
             position: relative;
