--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -25,7 +25,7 @@
             padding-top: 20px;
         }
         .movie-tile:hover {
-            background-color: #EEE;
+            background-color: #CCE;
             cursor: pointer;
         }
         .navbar-inverse {
